--- a/FrontEnd/webflix/src/styles.css
+++ b/FrontEnd/webflix/src/styles.css
@@ -2,9 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
 
-html, body {
+html,
+body {
   height: 100%;
 }
